Updated /data/processed/tars/.gitignore to ignore all image types.

--- a/data/processed/tars/.gitignore
+++ b/data/processed/tars/.gitignore
@@ -1,6 +1,8 @@
-# Updated: 07/12/17
-# Ignore encoded pdb imgaes - too many for repo
+# Updated: 07/17/17
+# Ignore encoded pdb images - too many for repo
 */*.png
+*/*.jpg
+*/*.jpeg
 
 # Ignore encoded pdb tars - too large for repo
 *.tar.gz
