--- a/docker/cpu-docker/Dockerfile
+++ b/docker/cpu-docker/Dockerfile
@@ -1,24 +1,14 @@
+# CPU Protein-Structure-Exploration Dockerfile
+# Updated: 7/17/17
+
+# Base Image
 FROM ubuntu:16.04
 
 # Install Dependencies
 RUN apt-get update
 RUN apt-get install -y build-essential bzip2 cmake curl git nano \
     nasm pkg-config rsync sudo tar timidity unzip wget \
-    autoconf automake gcc g++ gfortran \
-    libjpeg-dev \
-    zlib1g-dev
-#    software-properties-common \
-#    libboost-all-dev \
-#    libbz2-dev \
-#    libfluidsynth-dev \
-#    libfreetype6-dev \
-#    libgme-dev \
-#    libgtk2.0-dev \
-#    libopenal-dev \
-#    libpng12-dev \
-#    libsdl2-dev \
-#    libwildmidi-dev \
-#    libzmq3-dev \
+    autoconf automake gcc g++ gfortran libjpeg-dev zlib1g-dev
 RUN apt-get clean all
 
 # Build MPICH
@@ -34,8 +24,15 @@ RUN pip install numpy
 RUN pip install prody tqdm scipy scikit-image matplotlib sklearn \
 keras tensorflow h5py opencv-python keras-vis mpi4py
 
+# Python3 and Packages
+RUN apt-get install -y python3-dev python3 python3-pip python3-tk libvtk5-dev python3-vtk
+RUN pip3 install pip --upgrade
+RUN pip3 install numpy
+RUN pip3 install prody tqdm scipy scikit-image matplotlib sklearn \
+keras tensorflow h5py opencv-python keras-vis mpi4py
+
 # Enables X11 sharing and creates user home directory
-ENV USER_NAME prot-struct-exp-cpu
+ENV USER_NAME protein-structure-exploration-cpu
 ENV HOME_DIR /home/$USER_NAME
 ENV HOST_UID 1000
 ENV HOST_GID 1000
@@ -52,6 +49,7 @@ WORKDIR ${HOME_DIR}
 # Setup Bash Enviro
 RUN mkdir src
 RUN mkdir data
+RUN mkdir models
 RUN echo 'PS1="\[$(tput bold)\]\[\033[38;5;10m\]\u@Docker\[$(tput sgr0)\]\[\033[38;5;15m\]:\[$(tput sgr0)\]\[\033[38;5;12m\]\W\[$(tput sgr0)\]\[\033[38;5;15m\]\\$\[$(tput sgr0)\]"' >> .bashrc
 RUN ["/bin/bash"]
 CMD 'bash'
