--- a/docker/gpu/Dockerfile
+++ b/docker/gpu/Dockerfile
@@ -1,5 +1,5 @@
 # GPU Enabled Protein-Structure-Exploration Dockerfile
-# Updated: 7/17/17
+# Updated: 7/18/17
 
 # Base Images
 FROM ubuntu:16.04
@@ -9,7 +9,7 @@ FROM nvidia/cuda:8.0-cudnn5-devel
 RUN apt-get update
 RUN apt-get install -y build-essential bzip2 cmake curl git nano \
     nasm pkg-config rsync sudo tar timidity unzip wget \
-    autoconf automake gcc g++ gfortran libjpeg-dev zlib1g-dev
+    autoconf automake gcc g++ gfortran libjpeg-dev zlib1g-dev graphviz
 RUN apt-get clean all
 
 # Build MPICH
@@ -23,17 +23,19 @@ RUN apt-get install -y python-dev python python-pip python-tk libvtk5-dev python
 RUN pip install pip --upgrade
 RUN pip install numpy
 RUN pip install prody tqdm scipy scikit-image matplotlib sklearn \
-keras tensorflow-gpu h5py opencv-python keras-vis mpi4py mayavi
+keras tensorflow-gpu h5py opencv-python keras-vis mpi4py mayavi pydot graphviz
 
 # Python3 and Packages
 RUN apt-get install -y python3-dev python3 python3-pip
 RUN pip3 install pip --upgrade
 RUN pip3 install numpy
 RUN pip3 install tqdm scipy scikit-image matplotlib sklearn \
-keras tensorflow h5py opencv-python keras-vis
+keras tensorflow-gpu h5py opencv-python keras-vis pydot graphviz
+
+RUN echo 'export PS1="\[$(tput bold)\]\[\033[38;5;10m\]GPU-Docker\[$(tput sgr0)\]\[\033[38;5;15m\]:\[$(tput sgr0)\]\[\033[38;5;12m\]\W\[$(tput sgr0)\]\[\033[38;5;15m\]\\$\[$(tput sgr0)\]"' >> /etc/bash.bashrc
 
 # Enables X11 sharing and creates user home directory
-ENV USER_NAME protein-structure-exploration-gpu
+ENV USER_NAME protein-structure-exploration
 ENV HOME_DIR /home/$USER_NAME
 ENV HOST_UID 1000
 ENV HOST_GID 1000
@@ -51,6 +53,4 @@ WORKDIR ${HOME_DIR}
 RUN mkdir src
 RUN mkdir data
 RUN mkdir models
-RUN echo 'PS1="\[$(tput bold)\]\[\033[38;5;10m\]\u@Docker\[$(tput sgr0)\]\[\033[38;5;15m\]:\[$(tput sgr0)\]\[\033[38;5;12m\]\W\[$(tput sgr0)\]\[\033[38;5;15m\]\\$\[$(tput sgr0)\]"' >> .bashrc
 RUN ["/bin/bash"]
-CMD 'bash'
