Tweaked parameters for test model runs, added unfinished DatasetResizer.py.

--- a/src/data/.gitignore
+++ b/src/data/.gitignore
@@ -1,7 +1,10 @@
-# Updated 17 July 2017
+# Updated 18 July 2017
 
 # Ignore .swp files.
 *.swp
 
 # Ignore compiled python files.
 *.pyc
+
+# Ignore testing datasets.
+testsets/
