Updated .gitignores in data/processed/datasets and data/processed/tars to more accurately reflect storage use. Updated ../models/.gitignore to exclude output .tar.gz files containing total network outputs. Added directories tracking network run files (e.g. PSIBLAST and KRAS_HRAS net runs).

--- a/models/.gitignore
+++ b/models/.gitignore
@@ -1,4 +1,7 @@
-# Updated: 07/12/17
+# Updated: 07/26/17
 # Ignore model files - too large for repo
 */*.hdf5
 */*.json
+
+# Ignore final results .tar.gz files - too big for repo.
+*.tar.gz
