--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,14 @@
-# Updated 5 September 2017
-# Project-level .gitignore.
+# Git Ignore
+# Updated: 8/11/17
 
-# All compiled scripts and cache directories.
-**/*.pyc
-**/__pycache__
-
-# All swap files.
-**/*.swp
-
-# All network training outputs, dataset zips, image files. 
-**/*.hdf5
-**/*.png
-**/*.jpg
-**/*.json
-**/*.csv
-**/*.p
-**/*.gz
-
-# Numpy array files.
-**/*.npy
-
-# Jupyter checkpoints.
-**/*.ipynb_checkpoints
-
-# SLURM output.
-**/*.out
-
-# Mac-specific directory files.
-**/.DS_Store
-**/._.DS_Store
+__pycache__
+*.pyc
+.DS_Store
+*.hdf5
+*.png
+*.tar.gz
+data/interim
+test
+train
+*.binvox
+.ipynb_checkpoints
